syntax = "proto3";

option go_package = "./proto";

message GetHealthRequest {}
message GetHealthResponse { bool isHealthy = 1; }

message GetTimestampRequest {}
message GetTimestampResponse { string timestamp = 1; }

service ClockService {
  rpc GetHealth(GetHealthRequest) returns (GetHealthResponse) {};
  rpc GetTimestamp(GetTimestampRequest) returns (GetTimestampResponse) {};
}